# medical-fuzzy-system-with-nlp

./: README.md  app.py  pyproject.toml
database/: db.py  models.py
fuzzy_engine/: inference.py
nlp_engine/: semantic.py
